<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signin.SigInFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/black"
                app:titleTextColor="@color/white"
                app:title="@string/heroes_signin_title" />

            <ProgressBar
                android:id="@+id/progressLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone">

            </ProgressBar>

            <ImageView
                android:id="@+id/imgTop"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/spiderman"
                android:scaleType="fitCenter"
                android:layout_marginTop="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <LinearLayout
                android:id="@+id/linearEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgTop"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/heroes_signin_mail">
                </EditText>

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:hint="@string/heroes_signin_password">
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/heroes_signin_forgot_password"
                    android:layout_gravity="end">
                </TextView>

                <Button
                    android:id="@+id/btnFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginTop="16dp"
                    android:text="@string/heroes_signin_facebook"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_baseline_facebook_24"
                    android:backgroundTint="@color/black">
                </Button>

                <Button
                    android:id="@+id/btnGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/heroes_signin_gmail"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_baseline_mail_24"
                    android:backgroundTint="@color/black">
                </Button>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heroes_signin_marvel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearEdt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>